# cpp

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  AbstractWidget.cpp  AbstractWidget.hpp  Array.cpp  Array.hpp  CMakeLists.txt  CoQual.hpp  Const.cpp  Constant.cpp  CopyElision.cpp  Dockerfile  Gadget.cpp  Gadget.hpp  IndirectContainer.hpp  IndirectMap.hpp  IndirectSequence.hpp  LICENSE.md  Lifetime.cpp  Lockable.cpp  Lockable.hpp  Makefile  PointerMap.hpp  PointerVector.hpp  README.md  Shape.cpp  Shape.hpp  SharedCloneable.hpp  SharedObject.hpp  SharedRef.hpp  StretchableArray.cpp  StretchableArray.hpp  StrongOperators.hpp  StrongType.hpp  TaggedStrongType.hpp  TestArray.cpp  TestConstPointer.cpp  TestConstant.cpp  (+28 more)
.github/workflows/: ci.yml  cmake-single-platform.yml  github-actions-demo.yml
compat/: gsl14.hpp  lang17.hpp  memory14.hpp  numbers20.hpp  ranges23.hpp
